tests/architecture/fixtures/invalid/order-command-boundaries/page-checkout-orchestration.ts
export function invalidPageCheckoutOrchestration(services: {
  orderCommands: { create(): void };
  invoiceCommands: { create(): void };
}) {
  services.orderCommands.create();
  services.invoiceCommands.create();
}
